<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multicam_calibration</name>
  <version>0.1.0</version>
  <description>Multi-camera extrinsic calibration using hand-eye (AX=XB) method</description>
  <maintainer email="tudor.alinei-poiana@analog.com">Tudor Alinei-Poiana</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
